[gd_scene load_steps=24 format=3 uid="uid://cta34j7qnp22k"]

[ext_resource type="Script" path="res://UI/Scripts/Texture button/TextureButton.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://caolvbe4t3a3h" path="res://assets/icons/right mouse.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cha41vgg0pk6r" path="res://assets/icons/icon.png" id="4"]
[ext_resource type="Texture2D" uid="uid://by41xjx2041t1" path="res://assets/icons/monogram transparent.png" id="5"]
[ext_resource type="Script" path="res://UI/Scripts/Interface.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://jdppcni70f6w" path="res://Brushes/Basic/textures_1.png" id="10"]
[ext_resource type="Texture2D" uid="uid://cn5kyfj0y4hpf" path="res://assets/icons/move.png" id="11"]
[ext_resource type="Texture2D" uid="uid://b5jw4a0fbic7f" path="res://assets/icons/shift.png" id="13"]
[ext_resource type="Theme" uid="uid://b62yrsn5a5ga0" path="res://assets/themes/dark/theme.tres" id="14"]
[ext_resource type="Texture2D" uid="uid://cnjruwfeo4eto" path="res://assets/icons/arrow.png" id="17"]
[ext_resource type="Script" path="res://UI/Scripts/layer.gd" id="20"]
[ext_resource type="Texture2D" uid="uid://j4crfhp6aqii" path="res://assets/icons/left mouse.png" id="24"]
[ext_resource type="PackedScene" uid="uid://c44hhld82bpp2" path="res://assets/Splash/SplashDialog.tscn" id="27"]
[ext_resource type="Texture2D" uid="uid://bapfjmm4sr2s4" path="res://assets/icons/layers.png" id="28"]
[ext_resource type="Script" path="res://UI/Scripts/Export.gd" id="29"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0509804, 0.0470588, 0.0470588, 1)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0509804, 0.0470588, 0.0470588, 1)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="FontFile" id="6"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="7"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([SubResource("6"), SubResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="8"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="9"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([SubResource("8"), SubResource("8")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/glyphs/0/advance = Vector2(0, 0)
cache/0/16/0/glyphs/0/offset = Vector2(0, 0)
cache/0/16/0/glyphs/0/size = Vector2(0, 0)
cache/0/16/0/glyphs/0/uv_rect = Rect2(0, 0, 0, 0)
cache/0/16/0/glyphs/0/texture_idx = -1
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14")
script = ExtResource("9")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0

[node name="top" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("1")

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer/top"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 4.0
offset_bottom = -5.0

[node name="File" type="MenuButton" parent="VBoxContainer/top/ButtonContainer"]
layout_mode = 2
focus_mode = 2
text = "File menu"
flat = false

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/top/ButtonContainer"]
layout_mode = 2
focus_mode = 2
text = "Export Mesh"
flat = false
script = ExtResource("29")
Csg_combiner_node_path = NodePath("../../../../../../CSGCombiner3D")

[node name="Help" type="MenuButton" parent="VBoxContainer/top/ButtonContainer"]
layout_mode = 2
focus_mode = 2
text = "Help"
flat = false

[node name="transf options" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("2")

[node name="button container" type="HBoxContainer" parent="VBoxContainer/transf options"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -871.0
offset_top = -17.5
offset_bottom = 17.5
theme_override_constants/separation = 148

[node name="Snap" type="TextureRect" parent="VBoxContainer/transf options/button container"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
tooltip_text = "Snapping"
texture = ExtResource("11")
expand_mode = 1

[node name="snap" type="SpinBox" parent="VBoxContainer/transf options/button container/Snap"]
layout_mode = 0
offset_left = 43.1996
offset_right = 131.2
offset_bottom = 35.0
min_value = 0.1
step = 0.1
value = 2.0

[node name="layer" type="TextureRect" parent="VBoxContainer/transf options/button container"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
tooltip_text = "Floor/Layer:-
Page Up : Increase layer
Page Down : Decrease layer"
texture = ExtResource("28")
expand_mode = 1
script = ExtResource("20")

[node name="layer" type="SpinBox" parent="VBoxContainer/transf options/button container/layer"]
layout_mode = 0
offset_left = 43.1996
offset_right = 131.2
offset_bottom = 35.0
min_value = -1.0
step = 0.1

[node name="Status" type="Label" parent="VBoxContainer/transf options/button container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="down" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/down"]
custom_minimum_size = Vector2(255, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("3")

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/down/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 13.0
offset_right = -2.00002

[node name="Main" type="Panel" parent="VBoxContainer/down/Panel/TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/down/Panel/TabContainer/Main"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -71.0
offset_right = 115.0
texture = ExtResource("5")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/down/Panel/TabContainer/Main"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -181.086
offset_right = 106.0
offset_bottom = 29.9141
texture = ExtResource("4")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Main/TextureRect2"]
layout_mode = 0
offset_left = 52.0271
offset_top = 230.977
offset_right = 166.027
offset_bottom = 287.977
text = "Asset Maker
(ver 1.1.1)"

[node name="AssistMode" type="CheckButton" parent="VBoxContainer/down/Panel/TabContainer/Main"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = 14.9831
offset_right = 108.0
offset_bottom = 54.9831
theme_override_colors/font_color = Color(0.839216, 0.305882, 0.305882, 1)
text = "Position assist :"

[node name="Color" type="Panel" parent="VBoxContainer/down/Panel/TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CurrentColor" type="ColorPickerButton" parent="VBoxContainer/down/Panel/TabContainer/Color"]
layout_mode = 0
offset_left = 108.546
offset_top = 39.58
offset_right = 232.546
offset_bottom = 66.58
color = Color(0.996078, 0.988235, 0.988235, 1)

[node name="Label" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Color/CurrentColor"]
layout_mode = 0
offset_left = -74.5661
offset_top = -1.88776
offset_right = -11.5661
offset_bottom = 29.1122
text = "Color :"

[node name="CurrentTexture" type="TextureRect" parent="VBoxContainer/down/Panel/TabContainer/Color"]
layout_mode = 0
offset_left = 122.0
offset_top = 86.132
offset_right = 188.0
offset_bottom = 150.132
texture = ExtResource("10")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Color/CurrentTexture"]
layout_mode = 0
offset_left = -99.1218
offset_top = 14.487
offset_right = -19.1218
offset_bottom = 45.487
text = "Texture2D :"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/down/Panel/TabContainer/Color"]
clip_contents = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 159.0
offset_right = -1.99998
offset_bottom = -45.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/down/Panel/TabContainer/Color/VBoxContainer"]
custom_minimum_size = Vector2(225, 125)
layout_mode = 2
size_flags_vertical = 3

[node name="Textures" type="GridContainer" parent="VBoxContainer/down/Panel/TabContainer/Color/VBoxContainer/ScrollContainer"]
layout_mode = 2
columns = 3

[node name="None" type="TextureButton" parent="VBoxContainer/down/Panel/TabContainer/Color/VBoxContainer/ScrollContainer/Textures"]
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
script = ExtResource("1")

[node name="Label" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Color/VBoxContainer/ScrollContainer/Textures/None"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "None"
clip_text = true

[node name="CreateNew" type="Button" parent="VBoxContainer/down/Panel/TabContainer/Color/VBoxContainer"]
layout_mode = 2
text = "Load New"

[node name="Label" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Color/VBoxContainer"]
visible = false
layout_mode = 2
text = "It is advised to use an image of (1023x1024) as a texture
A base UV texture is provided with the software. "

[node name="Options" type="Panel" parent="VBoxContainer/down/Panel/TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Mode" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options"]
layout_mode = 0
offset_left = 56.2039
offset_top = 12.132
offset_right = 176.204
offset_bottom = 43.132
text = "Brush Mode :"

[node name="Mode" type="OptionButton" parent="VBoxContainer/down/Panel/TabContainer/Options/Mode"]
layout_mode = 0
offset_left = -5.0
offset_top = 43.0
offset_right = 126.0
offset_bottom = 74.0

[node name="Scale" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options"]
layout_mode = 0
offset_left = -1.05946
offset_top = 101.49
offset_right = 62.9405
offset_bottom = 132.49
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
text = "Scale :"

[node name="Label" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options/Scale"]
layout_mode = 0
offset_left = 41.2039
offset_top = 38.591
offset_right = 61.2039
offset_bottom = 69.591
theme_override_colors/font_color = Color(0.898039, 0, 0, 1)
text = "X :"

[node name="scale x" type="SpinBox" parent="VBoxContainer/down/Panel/TabContainer/Options/Scale/Label"]
layout_mode = 0
offset_left = 76.4762
offset_top = 2.409
offset_right = 164.476
offset_bottom = 33.409
min_value = 0.1
max_value = 1.0
step = 0.1
value = 1.0

[node name="Label2" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options/Scale"]
layout_mode = 0
offset_left = 41.2039
offset_top = 82.3176
offset_right = 71.2039
offset_bottom = 113.318
theme_override_colors/font_color = Color(0.156863, 0.847059, 0.0352941, 1)
text = "Y :"

[node name="scale y" type="SpinBox" parent="VBoxContainer/down/Panel/TabContainer/Options/Scale/Label2"]
layout_mode = 0
offset_left = 76.4762
offset_top = 2.409
offset_right = 164.476
offset_bottom = 33.409
min_value = 0.1
max_value = 1.0
step = 0.1
value = 1.0

[node name="Label3" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options/Scale"]
layout_mode = 0
offset_left = 41.2039
offset_top = 124.362
offset_right = 71.2039
offset_bottom = 155.362
theme_override_colors/font_color = Color(0.0705882, 0.121569, 0.843137, 1)
text = "Z :"

[node name="scale z" type="SpinBox" parent="VBoxContainer/down/Panel/TabContainer/Options/Scale/Label3"]
layout_mode = 0
offset_left = 76.4762
offset_top = 2.409
offset_right = 164.476
offset_bottom = 33.409
min_value = 0.1
max_value = 1.0
step = 0.1
value = 1.0

[node name="Rotate" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options"]
layout_mode = 0
offset_top = 267.285
offset_right = 89.0
offset_bottom = 298.285
theme_override_colors/font_color = Color(0.815686, 0.858824, 0.823529, 1)
text = "Rotation :"

[node name="Label" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options/Rotate"]
layout_mode = 0
offset_left = 41.2039
offset_top = 38.591
offset_right = 61.2039
offset_bottom = 69.591
theme_override_colors/font_color = Color(0.898039, 0, 0, 1)
text = "X :"

[node name="rotate x" type="HSlider" parent="VBoxContainer/down/Panel/TabContainer/Options/Rotate/Label"]
layout_mode = 0
offset_left = 47.7961
offset_right = 165.796
offset_bottom = 31.0
max_value = 360.0
step = 0.1
value = 1.0
rounded = true

[node name="Label2" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options/Rotate"]
layout_mode = 0
offset_left = 41.2039
offset_top = 61.5521
offset_right = 71.2039
offset_bottom = 92.5521
theme_override_colors/font_color = Color(0.156863, 0.847059, 0.0352941, 1)
text = "Y :"

[node name="rotate y" type="HSlider" parent="VBoxContainer/down/Panel/TabContainer/Options/Rotate/Label2"]
layout_mode = 0
offset_left = 48.0
offset_top = 2.0
offset_right = 166.0
offset_bottom = 33.0
max_value = 360.0
step = 0.1
value = 1.0

[node name="Label3" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options/Rotate"]
layout_mode = 0
offset_left = 41.2039
offset_top = 86.3628
offset_right = 71.2039
offset_bottom = 117.363
theme_override_colors/font_color = Color(0.0705882, 0.121569, 0.843137, 1)
text = "Z :"

[node name="rotate z" type="HSlider" parent="VBoxContainer/down/Panel/TabContainer/Options/Rotate/Label3"]
layout_mode = 0
offset_left = 48.7961
offset_top = 2.409
offset_right = 166.796
offset_bottom = 33.409
max_value = 360.0
step = 0.1
value = 1.0

[node name="RotationStatus" type="Label" parent="VBoxContainer/down/Panel/TabContainer/Options/Rotate"]
layout_mode = 0
offset_left = 33.9799
offset_top = 116.306
offset_right = 209.98
offset_bottom = 147.306

[node name="Drawable area" type="Panel" parent="VBoxContainer/down"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("5")

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_left = 252.999
offset_top = 3.68768
offset_right = 292.999
offset_bottom = 43.6877
texture = ExtResource("3")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/Panel/TextureRect2"]
layout_mode = 0
offset_left = 55.2981
offset_top = 3.56757
offset_right = 80.2981
offset_bottom = 34.5676
text = "OR"

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/Panel/TextureRect2/Label"]
layout_mode = 0
offset_left = 54.1089
offset_top = 4.7569
offset_right = 94.1089
offset_bottom = 30.7569
texture = ExtResource("13")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/Panel/TextureRect2/Label/TextureRect3"]
layout_mode = 0
offset_left = 49.265
offset_right = 68.265
offset_bottom = 31.0
text = "+"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/Panel/TextureRect2/Label/TextureRect3/Label"]
layout_mode = 0
offset_left = 30.0323
offset_top = -10.8216
offset_right = 84.0323
offset_bottom = 34.1784
texture = ExtResource("17")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/Panel/TextureRect2/Label/TextureRect3/Label/TextureRect2"]
layout_mode = 0
offset_left = 65.0
offset_top = 8.0
offset_right = 148.0
offset_bottom = 39.0
text = "= Camera3D Controlls"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_left = 33.0356
offset_top = 1.98425
offset_right = 87.0356
offset_bottom = 46.9843
texture = ExtResource("17")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/Panel/TextureRect"]
layout_mode = 0
offset_left = 65.0
offset_top = 8.0
offset_right = 148.0
offset_bottom = 39.0
text = "= Move "

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_left = 754.631
offset_top = 3.57166
offset_right = 794.631
offset_bottom = 43.5717
texture = ExtResource("24")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/Panel/TextureRect3"]
layout_mode = 0
offset_left = 40.5
offset_top = 6.0
offset_right = 58.5
offset_bottom = 37.0
text = "= Place/Erase blocks"

[node name="SplashRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.556863)

[node name="SplashDialog" parent="SplashRect" instance=ExtResource("27")]
size = Vector2i(710, 295)

[node name="Dialogs" type="Control" parent="."]
anchors_preset = 0

[node name="ExportDialog" type="FileDialog" parent="Dialogs"]
mode_overrides_title = false
access = 2

[node name="SaveDialog" type="FileDialog" parent="Dialogs"]
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.asset")

[node name="NewTexture" type="FileDialog" parent="Dialogs"]
dialog_text = "It is advised to use an image of (1023x1024) as a texture"
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.png")

[node name="Alert" type="AcceptDialog" parent="Dialogs"]

[node name="Panel" type="Panel" parent="Dialogs/Alert"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -36.0

[node name="Control" type="ScrollContainer" parent="Dialogs/Alert/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Dialogs/Alert/Panel/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="HelpMenu" type="Window" parent="Dialogs"]
position = Vector2i(0, 24)
size = Vector2i(714, 500)
visible = false
wrap_controls = true

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogs/HelpMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_right = -10.0

[node name="Label" type="Label" parent="Dialogs/HelpMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.396078, 0.733333, 0.482353, 1)
theme_override_fonts/font = SubResource("7")
text = "Asset Maker (ver 1.1.1)"

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogs/HelpMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.341176, 0.843137, 0.227451, 1)
theme_override_fonts/normal_font = SubResource("9")
bbcode_enabled = true
text = "
Made by :	\"Variable\"

Changes/Additions since version 1.0:		
	1.	TabBar have icons (New)
	2.	Can now draw continuously by using \"Shift + Left Mouse Button\" (New)
	3.	Some bug fixes (usual)
	4.	Added alert panels (since ver: 1.1)
	5.	An option in help menu to post an Issue (since ver: 1.1)
	6.	Added undo/redo (since ver: 1.1)
	7.	Added a new \"Paint\" tool (since ver: 1.1)
	8.	Added some minecraft textures (since ver: 1.0)
	9.	You can now use your own Textures. The texture should be a 
		(1023 x 1024) image made of \"6\" (341 x 512) images (2 rows and 3
		 columns) an example texture is given with the software. (since ver: 1.0) 

Instructions:	
	This program is a block based 3d modeler for creating simple assets, It is made using Godot and at the moment, comes with the following tools:
		1.	Draw tool
		2.	Erase tool
		3.	Dropper
		4.	Paint
	
Navigation:
	You can navigate in the 3d view by using:
	1.	Arrow keys to move (Simple movement)
	2.	Shift + Arrow keys to rotate and move (Left-Right to rotate, Up-Down to
			move camera up or down)
	3.	Right Mouse Button to rotate camera.
	
Floor/Layers:
	value (-1 to 100)
	The value of Floor/Layer determines the height of placement of block
	using shortcut key (Page Up,Page Down) you can increase or decrease
	the layer by \"1\" (if you want more precision, you can manually set it in its
	field box, there you can set it as a multiple of \"0.1\"

	
Tools:
	You can set them in the \"Options tab\"
	
1.	Draw Tool:
		It will place a block where your Cursor is currently at. It will also remove a
		block if there is already a block there. You can also draw continuosly by using \"Shift + Left Mouse Button\" (one click for one block)

2.	Eraser Tool:
		While pressing the Left Mouse Button, it will start erasing the blocks.
		(The Cursor should be placed in the same layer as the blocks you which
		to erase.
		
3.	Dropper Tool:
		If a block is already placed at the cursor position then the block material
		will be copied, else a new block will be created (one click for one block)

3.	Paint Tool:
		If a block is present at cursor position, it will be painted according to the
		color and texture selected (experimental)

Scaling/Rotating the brush:
	Furthermore, you can Scale (0.1 - 1.0) and Rotate(0 - 360 degrees) in the \"Options tab\".

For better understanding, i have also included some examples with this program. I hope that this program or the examples will be of some use.
"

[connection signal="value_changed" from="VBoxContainer/transf options/button container/Snap/snap" to="." method="_on_snap_value_changed"]
[connection signal="value_changed" from="VBoxContainer/transf options/button container/layer/layer" to="." method="_on_layer_value_changed"]
[connection signal="toggled" from="VBoxContainer/down/Panel/TabContainer/Main/AssistMode" to="." method="_on_AssistMode_toggled"]
[connection signal="color_changed" from="VBoxContainer/down/Panel/TabContainer/Color/CurrentColor" to="." method="_on_CurrentColor_color_changed"]
[connection signal="pressed" from="VBoxContainer/down/Panel/TabContainer/Color/VBoxContainer/CreateNew" to="." method="_on_CreateNew_pressed"]
[connection signal="item_selected" from="VBoxContainer/down/Panel/TabContainer/Options/Mode/Mode" to="." method="_on_Mode_item_selected"]
[connection signal="value_changed" from="VBoxContainer/down/Panel/TabContainer/Options/Scale/Label/scale x" to="." method="_on_scale_x_value_changed"]
[connection signal="value_changed" from="VBoxContainer/down/Panel/TabContainer/Options/Scale/Label2/scale y" to="." method="_on_scale_y_value_changed"]
[connection signal="value_changed" from="VBoxContainer/down/Panel/TabContainer/Options/Scale/Label3/scale z" to="." method="_on_scale_z_value_changed"]
[connection signal="value_changed" from="VBoxContainer/down/Panel/TabContainer/Options/Rotate/Label/rotate x" to="." method="_on_rotate_x_value_changed"]
[connection signal="value_changed" from="VBoxContainer/down/Panel/TabContainer/Options/Rotate/Label2/rotate y" to="." method="_on_rotate_y_value_changed"]
[connection signal="value_changed" from="VBoxContainer/down/Panel/TabContainer/Options/Rotate/Label3/rotate z" to="." method="_on_rotate_z_value_changed"]
[connection signal="mouse_entered" from="VBoxContainer/down/Drawable area" to="." method="_on_Drawable_area_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/down/Drawable area" to="." method="_on_Drawable_area_mouse_exited"]
[connection signal="file_selected" from="Dialogs/NewTexture" to="." method="_on_NewTexture_file_selected"]
